monitoria/mac323/4-2-35/grades/Julio-Ueda_191469_assignsubmission_file_EX4.2.35.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-35/tester/checker/checker' is up to date.
CoreVertices.java:24: error: reference to Queue is ambiguous
   Queue<Integer>[] components;
   ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
CoreVertices.java:29: error: no suitable constructor found for Digraph(In)
      G   = new Digraph(in);
            ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
CoreVertices.java:36: error: reference to Queue is ambiguous
      components = (Queue<Integer>[]) new Queue[M];
                    ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
CoreVertices.java:36: error: reference to Queue is ambiguous
      components = (Queue<Integer>[]) new Queue[M];
                                          ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
CoreVertices.java:37: error: reference to Queue is ambiguous
      for (int i = 0; i < M; i++)     components[i] = new Queue<Integer>();
                                                          ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
5 errors
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
CoreVertices.java:25: error: reference to Queue is ambiguous
   Queue<Integer>[] components;
   ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
CoreVertices.java:30: error: no suitable constructor found for Digraph(In)
      G   = new Digraph(in);
            ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
CoreVertices.java:37: error: reference to Queue is ambiguous
      components = (Queue<Integer>[]) new Queue[M];
                    ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
CoreVertices.java:37: error: reference to Queue is ambiguous
      components = (Queue<Integer>[]) new Queue[M];
                                          ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
CoreVertices.java:38: error: reference to Queue is ambiguous
      for (int i = 0; i < M; i++)     components[i] = new Queue<Integer>();
                                                          ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
5 errors
